Fix vertical scrollbar issue in hero section

--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,14 @@ body {
   color: white;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  
+  overflow: auto;
 }
+
+body::-webkit-scrollbar {
+  display:none;
+}
+
 
 .c-space {
   @apply sm:px-10 px-5 lg:px-15;
