--- a/src/sections/Hero.module.css
+++ b/src/sections/Hero.module.css
@@ -4,7 +4,13 @@
 }
 
 
+body {
+  overflow: auto;
+}
 
+body::-webkit-scrollbar {
+  display:none;
+}
 
 
 .heroContainer {
